--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nicolas Traczuk - Portfolio</title>
     <link rel="stylesheet" href="./src/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <style>
+      body {
+        background-color: #05043b;
+      }
+      p {
+        font-family: "Roboto", sans-serif;
+      }
+      h1, h2, h3, h4, h5, h6 {
+        font-family: "Andika", sans-serif !important;
+      } 
+    </style>
   </head>
   <body>
     <div id="root"></div>
